i think im fixing text wrapping

--- a/style/style.css
+++ b/style/style.css
@@ -91,6 +91,7 @@
     justify-content: center;
     padding-right:20px;
     padding-left:20px;
+    word-wrap: break-word;
   }
   .archive-boxes{
     grid-column:2/4;
@@ -114,9 +115,6 @@
     grid-row: 4/6;
     justify-self: center;
     align-self: center;
-  }
-  #read_content{
-    grid-column: 2/3;
   }
   /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
   @media screen and (max-width:600px) {
